--- a/index.html
+++ b/index.html
@@ -1,33 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>
+      Frontend Mentor | Huddle landing page with single introductory section
+    </title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/dce89667e1.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with single introductory section</title>
+  <body>
+    <header class="header">
+      <a href="" id="huddle-link"
+        ><img src="images/logo.svg" alt="logo" class="header__logo"
+      /></a>
+    </header>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <main class="hero">
+      <img src="images/illustration-mockups.svg" alt="" class="hero__img" />
+      <div class="hero__container">
+        <h1 class="hero__h1">Build The Community Your Fans Will Love</h1>
+        <p class="hero__desc">
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
+          engage in genuine discussion.
+        </p>
+        <button type="submit" class="hero__btn">Register</button>
+      </div>
+    </main>
 
-  Build The Community Your Fans Will Love
+    <footer class="footer">
+      <ul class="footer__list">
+        <li class="footer__list-item">
+          <a href="" id="facebook-link"><i class="fab fa-facebook-f"></i></a>
+        </li>
+        <li class="footer__list-item">
+          <a href="" id="twitter-link"><i class="fab fa-twitter"></i></a>
+        </li>
+        <li class="footer__list-item">
+          <a href="" id="instagram-link"><i class="fab fa-instagram"></i></a>
+        </li>
+      </ul>
+    </footer>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <footer class="footer-frontendmaster">
+      <p class="footer-frontendmaster__attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/sonickonic">sonickonic</a>.
+      </p>
+    </footer>
+  </body>
 </html>
