--- a/index.html
+++ b/index.html
@@ -12,14 +12,6 @@
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
     <script
       src="https://kit.fontawesome.com/dce89667e1.js"
       crossorigin="anonymous"
@@ -29,45 +21,36 @@
 
   <body>
     <header class="header">
-      <a href="" id="huddle-link"
+      <a href="#" id="huddle-link"
         ><img src="images/logo.svg" alt="logo" class="header__logo"
       /></a>
     </header>
 
     <main class="hero">
-      <img src="images/illustration-mockups.svg" alt="" class="hero__img" />
+      <img src="images/illustration-mockups.svg" alt="" class="hero__image" />
       <div class="hero__container">
-        <h1 class="hero__h1">Build The Community Your Fans Will Love</h1>
-        <p class="hero__desc">
+        <h1 class="hero__heading">Build The Community Your Fans Will Love</h1>
+        <p class="hero__description">
           Huddle re-imagines the way we build communities. You have a voice, but
           so does your audience. Create connections with your users as you
           engage in genuine discussion.
         </p>
-        <button type="submit" class="hero__btn">Register</button>
+        <a href="#" id="btn" class="btn">Register</a>
       </div>
     </main>
 
-    <footer class="footer">
-      <ul class="footer__list">
-        <li class="footer__list-item">
-          <a href="" id="facebook-link"><i class="fab fa-facebook-f"></i></a>
+    <div class="social">
+      <ul class="social__list">
+        <li class="social__list-item">
+          <a href="#" id="facebook-link"><i class="fab fa-facebook-f"></i></a>
         </li>
-        <li class="footer__list-item">
-          <a href="" id="twitter-link"><i class="fab fa-twitter"></i></a>
+        <li class="social__list-item">
+          <a href="#" id="twitter-link"><i class="fab fa-twitter"></i></a>
         </li>
-        <li class="footer__list-item">
-          <a href="" id="instagram-link"><i class="fab fa-instagram"></i></a>
+        <li class="social__list-item">
+          <a href="#" id="instagram-link"><i class="fab fa-instagram"></i></a>
         </li>
       </ul>
-    </footer>
-
-    <footer class="footer-frontendmaster">
-      <p class="footer-frontendmaster__attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/sonickonic">sonickonic</a>.
-      </p>
-    </footer>
+    </div>
   </body>
 </html>
