Add background animation

--- a/index.html
+++ b/index.html
@@ -52,5 +52,16 @@
         </li>
       </ul>
     </div>
+
+    <div class="background">
+      <div class="square"></div>
+      <div class="close"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="close"></div>
+      <div class="square"></div>
+    </div>
   </body>
 </html>
