--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <div class="social">
       <ul class="social__list">
         <li class="social__list-item">
-          <a href="#" id="facebook-link"><i class="fab fa-facebook-f"></i></a>
+          <a href="" id="facebook-link"><i class="fab fa-facebook-f"></i></a>
         </li>
         <li class="social__list-item">
-          <a href="#" id="twitter-link"><i class="fab fa-twitter"></i></a>
+          <a href="" id="twitter-link"><i class="fab fa-twitter"></i></a>
         </li>
         <li class="social__list-item">
-          <a href="#" id="instagram-link"><i class="fab fa-instagram"></i></a>
+          <a href="" id="instagram-link"><i class="fab fa-instagram"></i></a>
         </li>
       </ul>
     </div>
